@@ -15,6 +15,10 @@
         to connect to
      report: den at skbkontur.ru and P. Szczygielski
      feedback and ok djm@
+   - djm@cvs.openbsd.org 2011/09/25 05:44:47
+     [auth2-pubkey.c]
+     improve the AuthorizedPrincipalsFile debug log message to include
+     file and line number
 
 20110929
  - (djm) [configure.ac defines.h] No need to detect sizeof(char); patch
